# sonara-os

./: .dockerignore  .env.example  .gitattributes  .gitignore  .mcp.json  .vercelignore  ADMIN_SETUP.md  AGENTS.md  AUTH_SETUP.md  CUSTOMER_USAGE_READINESS.md  DEPLOYMENT.md  DESIGN_BASELINE.md  Dockerfile  ENVIRONMENT_VARIABLES.md  GOOGLE_OAUTH_SETUP.md  LAUNCH_CHECKLIST.md  LAUNCH_RUNBOOK.md  LEGAL_REVIEW.md  LEGAL_REVIEW_CHECKLIST.md  MARKET_POSITIONING.md  OWNER_MANUAL_10_PERCENT.md  PRICING_STRATEGY.md  PRODUCT_STRATEGY.md  README.md  RESEND_SETUP.md  SECURITY_NOTES.md  STRIPE_SETUP.md  SUPABASE_SETUP.md  VERCEL_SETUP.md  codex-bootstrap-clean-signal-os.patch  docker-compose.ai.yml  docker-compose.dev.yml  eslint.config.cjs  eslint.config.mjs  next.config.mjs  next.config.ts  package-lock.json  package.json  package.old.json  pnpm-lock.yaml  (+9 more)
app/: layout.tsx  (+6 more)
python/: .env.example  README.md  pyproject.toml
python/scripts/: db_healthcheck.py  export_schema_report.py
python/sonara_ops/: __init__.py  analytics.py  config.py  db.py  healthcheck.py  main.py  migrations.py  stripe_audit.py
sonara-industries/apps/api/: Dockerfile  alembic.ini  pyproject.toml
sonara-industries/apps/api/app/: formulas.py  main.py
sonara-industries/apps/api/app/core/: audit.py  config.py  cors.py  logging.py  permissions.py  rate_limit.py  request_id.py  security.py
sonara-industries/apps/api/app/db/: init_db.py  models.py  session.py
sonara-industries/apps/api/app/migrations/: env.py
sonara-industries/apps/api/sonara_industries_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+1873 files in other folders)
