[project]
name = "sonara-industries-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.0",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",
  "redis>=5.0.0",
  "httpx>=0.27.0",
  "pytest>=8.0.0",
  "feedparser>=6.0.11"
]

[tool.pytest.ini_options]
testpaths = ["app/tests"]

